* Remove Object.is(Function|Number|String) from internal use in favor of simple "typeof" operators. [jddalton]

* Overwrite Array.prototype methods assigned by Enumerable with optimized equivalents. [jddalton]

* Optimize by using "_each" instead of "each" where applicable. Closes #9092. [jddalton, sylvainzimmer]

* Preserve inline display style when using Element#show and Element#hide. Closes #3868. [anonymous, Tobie Langel]

* Fix issue where Function#argumentNames returned incorrect results in IE when comments were intermixed with argument names. [#397 state:resolved] [Christophe Porteneuve, T.J. Crowder]

* unit test: Reorganize the unit test lib. [Tobie Langel]

* Make Element#viewportOffset take advantage of getBoundingClientRect()'s speed boost when supported. [Andrew Dupont, Andrew Kaspick, jddalton]

* unit test: Add/modify unit tests for Event observe/stopObserving and Element#(absolutize|relativize|scrollTo|viewportOffset). [jddalton, Nick Stakenburg]

* For consistency, add additional optional parameter "context" to Number#times. Closes #9252. [rmm5t, Samuel Lebeau]

* Selector.patterns should be represented as an ordered structure. [#315 state:resolved] [ADO, kangax]

* Correct inconsistencies in Selector.patterns "attrPresence" and "attr" which allow attributes with dashes to be matched. [#285 state:resolved] [leiyou, jddalton, kangax]

* Ensure Form.reset() returns a reference to the form element. [#309 state:resolved] [Phil, kangax]

* Give Enumerable#invoke support for invoking host objects' methods that don't have apply(). [#278 state:resolved] [Garrett Smith, jddalton, kangax]

* Ensure String#gsub escapes special characters if pattern is a string. [#252 state:resolved] [jddalton, Marton Kiss-Albert]

* Ensure Enumerable#grep escapes special characters if regex is a string. [#257 state:resolved] [jddalton, Marton Kiss-Albert]
