@@ -280,10 +280,12 @@
 <!-- Positioning methods bench -->
 <div id="body_relative" style="position: relative;"></div>
 <div id="body_absolute" style="position: absolute; top: 10px; left: 10px">
-  <div id="absolute_absolute" style="position: absolute; top: 10px; left:10px"> </div>
+  <div id="absolute_absolute" style="position: absolute; top: 10px; left:10px; width: 25px; height: 25px; overflow:scroll;">
+    <span style="display:block; width: 50px; height: 50px;">foo</span>
+  </div>
   <div id="absolute_relative" style="position: relative; top: 10px; left:10px">
     <div style="height:10px;font-size:2px">test<span id="inline">test</span></div>
-    <div id="absolute_relative_undefined">XYZ</div>
+    <div id="absolute_relative_undefined" style="width: 50px; height: 50px;">XYZ</div>
   </div>
   <div id="absolute_fixed" style="position: fixed; top: 10px; left: 10px; width: 25px; height: 25px; overflow:scroll;">
     <span id="absolute_fixed_absolute" style="position: absolute; top: 10px; left: 10px">foo</span>
