@@ -1,3 +1,5 @@
+* Remove IE code related to "fixed" positioned elements because IE doesn't support "fixed" elements. [jddalton]
+
 * Remove Object.is(Function|Number|String) from internal use in favor of simple "typeof" operators. [jddalton]
 
 * Overwrite Array.prototype methods assigned by Enumerable with optimized equivalents. [jddalton]
